@@ -8,6 +8,7 @@ BUG: Ticket#652 - OFFSET must be specified together with LIMIT for TScaffoldView
 BUG: Ticket#653 - TUrlMapping: ServiceId irgnored in URL-Map (Qiang)
 BUG: Ticket#488 - TActiveCustomValidator Is Bypassing My Callback (Wei)
 BUG: Ticket#620 - PRADO should not take over all of Prototype's Callbacks (Wei)
+BUG: Ticket#635 - TDatePicker not correctly updating month (Christophe)
 BUG: TWizard Sidebar using TDataListItemRenderer has error (Qiang)
 BUG: TOutputCache crashes when a default button is set (Qiang)
 BUG: Fixed several typos in TDbCache (Qiang)
